# rng

./: CMakeLists.txt  LICENSE  README.md
include/rng/: rng.h
src/: rng.c
